test3/build/log/idf_py_stdout_output_98528
[1/942] Generating project_elf_src_esp32c6.c
[2/942] Generating memory.ld linker script...
[3/942] Generating ../../partition_table/partition-table.bin
Partition table binary generated. Contents:
*******************************************************************************
# ESP-IDF Partition Table
# Name, Type, SubType, Offset, Size, Flags
nvs,data,nvs,0x9000,24K,
phy_init,data,phy,0xf000,4K,
factory,app,factory,0x10000,1M,
*******************************************************************************
[4/942] Building C object esp-idf/mbedtls/mbedtls/3rdparty/p256-m/CMakeFiles/p256m.dir/p256-m/p256-m.c.o
[5/942] Building C object esp-idf/mbedtls/mbedtls/3rdparty/p256-m/CMakeFiles/p256m.dir/p256-m_driver_entrypoints.c.o
[6/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesce.c.o
FAILED: esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesce.c.o 
/opt/homebrew/bin/aarch64-apple-darwin20-gcc-11 -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/amitupadhyay/esp_projects/test3/build/config -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/port/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library -I/Users/amitupadhyay/esp_projects/test3/build/esp-idf/mbedtls/mbedtls/library -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/port/sha/dma/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/port/aes/dma/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/newlib/platform_include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/config/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/config/include/freertos -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/config/riscv/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/freertos/esp_additions/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_hw_support/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_hw_support/port/esp32c6/. -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/heap/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/log/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/soc/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/soc/esp32c6 -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/soc/esp32c6/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/hal/platform_port/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/hal/esp32c6/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/hal/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_rom/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_rom/include/esp32c6 -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_rom/esp32c6 -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_common/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_system/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_system/port/soc -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_system/port/include/riscv -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/esp_system/port/include/private -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/riscv/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/include/apps -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/include/apps/sntp -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/lwip/src/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/port/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/port/freertos/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -Wall -Wextra -Wwrite-strings -Wformat=2 -Wno-format-nonliteral -Wvla -Wlogical-op -Wshadow -Wformat-signedness -Wformat-overflow=2 -Wformat-truncation -Werror -Wmissing-declarations -Wmissing-prototypes -O0 -g3 -arch arm64 -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX14.4.sdk -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/amitupadhyay/esp_projects/test3=. -fmacro-prefix-map=/Users/amitupadhyay/esp/v5.2.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesce.c.o -MF esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesce.c.o.d -o esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesce.c.o -c /Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c
/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c: In function 'mbedtls_aesce_crypt_ecb':
/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c:231:49: error: 'mbedtls_aes_context' {aka 'esp_aes_context'} has no member named 'buf'
  231 |     unsigned char *keys = (unsigned char *) (ctx->buf + ctx->rk_offset);
      |                                                 ^~
/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c:231:60: error: 'mbedtls_aes_context' {aka 'esp_aes_context'} has no member named 'rk_offset'
  231 |     unsigned char *keys = (unsigned char *) (ctx->buf + ctx->rk_offset);
      |                                                            ^~
/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c:234:53: error: 'mbedtls_aes_context' {aka 'esp_aes_context'} has no member named 'nr'
  234 |         block = aesce_encrypt_block(block, keys, ctx->nr);
      |                                                     ^~
/Users/amitupadhyay/esp/v5.2.1/esp-idf/components/mbedtls/mbedtls/library/aesce.c:236:53: error: 'mbedtls_aes_context' {aka 'esp_aes_context'} has no member named 'nr'
  236 |         block = aesce_decrypt_block(block, keys, ctx->nr);
      |                                                     ^~
[7/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aesni.c.o
[8/942] Building C object esp-idf/mbedtls/mbedtls/3rdparty/everest/CMakeFiles/everest.dir/library/everest.c.o
[9/942] Building C object esp-idf/mbedtls/mbedtls/3rdparty/everest/CMakeFiles/everest.dir/library/Hacl_Curve25519_joined.c.o
[10/942] Building C object esp-idf/mbedtls/mbedtls/3rdparty/everest/CMakeFiles/everest.dir/library/x25519.c.o
[11/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aes.c.o
[12/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/asn1parse.c.o
[13/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/asn1write.c.o
[14/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/aria.c.o
[15/942] Building C object esp-idf/mbedtls/mbedtls/library/CMakeFiles/mbedcrypto.dir/base64.c.o
ninja: build stopped: subcommand failed.
